[gd_scene load_steps=2 format=2]

[ext_resource path="res://FeedbackShake.gd" type="Script" id=1]

[node name="FeedbackShakeNoise" type="Node2D"]
script = ExtResource( 1 )

[node name="TweenShake" type="Tween" parent="."]

[node name="TimerDuration" type="Timer" parent="."]
one_shot = true

[node name="TimerFrequency" type="Timer" parent="."]

[connection signal="timeout" from="TimerDuration" to="." method="_on_TimerDuration_timeout"]
[connection signal="timeout" from="TimerFrequency" to="." method="_on_TimerFrequency_timeout"]
